syntax = "proto3";

option go_package = "github.com/wetrycode/begonia/example/api/v1";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
import "common/web.proto";
import "common/options.proto";
option (wetrycode.begonia.go_mod_pkg)="github.com/wetrycode/begonia/example";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (wetrycode.begonia.APIResponse) {
    option (google.api.http)={
		post:"/api/v1/example/helloworld"
		body:"*"
	};
  }

  rpc SayHelloStreamReply (HelloRequest) returns (stream wetrycode.begonia.APIResponse) {
    option (google.api.http) = {
        post: "/api/v1/example/helloworld/stream"
        body: "*"
      };

  }

  rpc SayHelloBidiStream (stream HelloRequest) returns (stream wetrycode.begonia.APIResponse) {
    option (google.api.http) = {
        post: "/api/v1/example/stream/helloworld"
        body: "*"
      };

  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}